--- a/Notes/Properties/Resources.resx
+++ b/Notes/Properties/Resources.resx
@@ -130,7 +130,7 @@
   <data name="Image_waiting" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resouces\Image_waiting.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="150_Download" type="System.Resources.ResXFileRef, System.Windows.Forms">
+  <data name="Download_150" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resouces\150_Download.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
